[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immich-prune-trash"
version = "0.1.0"
description = "Delete on-disk originals for trashed Immich assets and empty trash"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = ["immich"]

[dependency-groups]
dev = ["mypy"]

[tool.uv.sources]
immich = { git = "https://github.com/streambinder/unciae.git", branch = "master", subdirectory = "media/immich" }

[tool.hatch.build.targets.wheel]
packages = []
force-include = { "runner.py" = "immich_prune_trash/runner.py" }

[tool.mypy]
strict = true
files = ["runner.py"]
