[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immich"
version = "0.1.0"
description = "Reusable Immich API client"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = ["httpx>=0.27"]

# flat layout: api.py + __init__.py at this dir -> wheel module `immich`
[tool.hatch.build.targets.wheel]
packages = []
force-include = { "api.py" = "immich/api.py", "__init__.py" = "immich/__init__.py" }

[tool.mypy]
# phase-2 follow-up: enable strict mode + full annotations per ai/README.md §21.7
strict = false
