[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renovo"
version = "0.1.0"
description = "Concurrent shell command runner with per-task colored output"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "anyio",
  "asyncclick",
  "termcolor",
]

[tool.hatch.build.targets.wheel]
packages = []
force-include = { "runner.py" = "renovo/runner.py" }

[tool.mypy]
# phase-2 follow-up: enable strict mode + full annotations per ai/README.md §21.7
strict = false
