[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "album-assets"
version = "0.1.0"
description = "List asset paths for Immich albums"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = ["immich"]

[tool.uv.sources]
immich = { git = "https://github.com/streambinder/unciae.git", branch = "master", subdirectory = "media/immich" }

[tool.hatch.build.targets.wheel]
packages = []
force-include = { "runner.py" = "album_assets/runner.py" }

[tool.mypy]
# phase-2 follow-up: enable strict mode + full annotations per ai/README.md §21.7
strict = false
