[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "album-assets"
version = "0.1.0"
description = "List asset paths for Immich albums"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = ["immich"]

[dependency-groups]
dev = ["mypy"]

[tool.uv.sources]
immich = { git = "https://github.com/streambinder/unciae.git", branch = "master", subdirectory = "media/immich" }

[tool.hatch.build.targets.wheel]
packages = []
force-include = { "runner.py" = "album_assets/runner.py" }

[tool.mypy]
strict = true
files = ["runner.py"]
